--- a/Code/app/src/main/res/layout/activity_add.xml
+++ b/Code/app/src/main/res/layout/activity_add.xml
@@ -5,21 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context=".Add">
+
     <LinearLayout
+        android:id="@+id/addHeader"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addHeader">
+        android:layout_height="wrap_content">
+
         <Button
             android:id="@+id/returnButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:onClick="ReturnButton"
-            android:text="@string/return_to_mood_history"/>
+            android:text="@string/return_to_mood_history" />
     </LinearLayout>
 
     <ScrollView
@@ -36,165 +40,227 @@
                 android:id="@+id/AddviewPager"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="128dp"
+                android:layout_marginLeft="128dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="128dp"
+                android:layout_marginRight="128dp"
                 android:adjustViewBounds="true"
-                app:layout_constraintEnd_toEndOf="@id/Addguideline"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/Addcontent"
-                app:layout_constraintDimensionRatio="1:1">
+                app:layout_constraintTop_toTopOf="@+id/Addcontent">
 
             </androidx.viewpager.widget.ViewPager>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Emotion"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/AddviewPager" />
 
             <ToggleButton
                 android:id="@+id/locationToggle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
                 android:text="ToggleButton"
                 android:textOff="No"
                 android:textOn="Yes"
                 app:layout_constraintStart_toEndOf="@+id/locationView"
-                app:layout_constraintTop_toTopOf="@+id/locationView" />
+                app:layout_constraintTop_toBottomOf="@id/photoToggle" />
 
             <TextView
                 android:id="@+id/locationView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="56dp"
-                android:layout_marginLeft="56dp"
-                android:layout_marginTop="32dp"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginLeft="64dp"
+                android:layout_marginTop="8dp"
                 android:text="Location?"
+                android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoView" />
-
+                app:layout_constraintTop_toBottomOf="@id/photoView" />
 
             <TextView
                 android:id="@+id/timeView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:text=""
-                app:layout_constraintBottom_toTopOf="@+id/dateButton"
-                app:layout_constraintStart_toEndOf="@+id/timeButton" />
+                android:textColor="#000000"
+                app:layout_constraintBottom_toTopOf="@id/dateView"
+                app:layout_constraintStart_toEndOf="@+id/timeButton"
+                app:layout_constraintTop_toBottomOf="@id/textView" />
 
             <TextView
                 android:id="@+id/dateView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
                 android:text=""
-                app:layout_constraintBottom_toBottomOf="@+id/dateButton"
-                app:layout_constraintStart_toEndOf="@+id/dateButton" />
+                android:textColor="#000000"
+                app:layout_constraintStart_toEndOf="@+id/dateButton"
+                app:layout_constraintTop_toBottomOf="@id/timeView" />
 
             <Button
                 android:id="@+id/ConfirmAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="128dp"
-                android:layout_marginLeft="128dp"
-                android:layout_marginEnd="128dp"
-                android:layout_marginRight="128dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                android:layout_marginBottom="16dp"
                 android:text="@string/confirm"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spinner1" />
 
             <ToggleButton
                 android:id="@+id/photoToggle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="9dp"
-                android:layout_marginLeft="9dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
                 android:text="ToggleButton"
                 android:textOff="No"
                 android:textOn="Yes"
                 app:layout_constraintStart_toEndOf="@+id/photoView"
-                app:layout_constraintTop_toTopOf="@+id/photoView" />
+                app:layout_constraintTop_toBottomOf="@id/dateView" />
 
             <TextView
                 android:id="@+id/photoView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="64dp"
                 android:layout_marginLeft="64dp"
+                android:layout_marginTop="8dp"
                 android:text="Photo?"
+                android:textColor="#000000"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/dateButton" />
 
+            <ImageView
+                android:id="@+id/tempImageView"
+                android:layout_width="80dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="8dp"
+                android:scaleType="fitCenter"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@id/reasonView"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/photoToggle"
+                app:layout_constraintTop_toBottomOf="@id/dateButton"></ImageView>
+
             <Button
                 android:id="@+id/timeButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_width="160dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginLeft="64dp"
+                android:layout_marginTop="16dp"
                 android:text="Select a time"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/AddviewPager" />
+                app:layout_constraintTop_toBottomOf="@id/textView" />
 
             <Button
                 android:id="@+id/dateButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_width="160dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginLeft="64dp"
+                android:layout_marginTop="8dp"
                 android:text="Select a date"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/timeButton" />
 
             <TextView
                 android:id="@+id/reasonView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="64dp"
                 android:layout_marginLeft="64dp"
-                android:layout_marginTop="56dp"
+                android:layout_marginTop="8dp"
                 android:text="Reason:"
+                android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/locationView" />
+                app:layout_constraintTop_toBottomOf="@id/EditLocation" />
 
             <TextView
                 android:id="@+id/socialView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="64dp"
                 android:layout_marginLeft="64dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="8dp"
                 android:text="Social Situation:"
-                android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="@+id/reasonView"
-                app:layout_constraintTop_toBottomOf="@+id/reasonView" />
+                android:textColor="#000000"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/addReasonText" />
 
             <EditText
                 android:id="@+id/addReasonText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginLeft="64dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
+                android:layout_marginRight="64dp"
                 android:hint="Add reason"
                 android:inputType="text"
                 android:maxLength="20"
                 android:text=""
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/reasonView"
-                app:layout_constraintStart_toEndOf="@+id/reasonView" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/reasonView" />
 
             <Button
                 android:id="@+id/EditLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_width="168dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginLeft="64dp"
+                android:layout_marginTop="8dp"
                 android:text="Change Location?"
                 android:visibility="gone"
-                app:layout_constraintStart_toEndOf="@+id/locationToggle"
-                app:layout_constraintTop_toBottomOf="@+id/photoToggle" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/locationToggle" />
 
             <Spinner
                 android:id="@+id/spinner1"
+                style="@style/Widget.AppCompat.Spinner.Underlined"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginLeft="64dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
+                android:layout_marginRight="64dp"
+                android:fadingEdge="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -205,8 +271,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.75"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintGuide_percent="0.96"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
